# analog-dance-pad

./: .gitignore  .gitmodules  LICENSE  README.md  start.bat
.github/workflows/: build.yml
adp-tool/: CMakeLists.txt  CMakePresets.json  PKGBUILD  README.md  adp-tool.sln  adp-tool.vcxproj  adp-tool.vcxproj.filters  cert.pem  key.pem  profile.json  server.cert  server.key  vcpkg.json
adp-tool/cmake/deb/: 70-adp.rules  99_adp.rules  adp-tool.desktop.in  postinst  postrm
adp-tool/lib/: CMakeLists.txt  asio.cmake  esp-flasher.cmake  git.cmake  hidapi.cmake  imgui.cmake  nfd.cmake  serial.cmake  wxWidgets.cmake
adp-tool/lib/avrdude/: CMakeLists.txt  avrdude-slic3r.conf  pgm_type.c  usb_hidapi.c  usbasp.c
adp-tool/src/: Adp.h  Adp.h.in  Cli.cpp  Main.cpp  Main.h
adp-tool/src/Assets/: Assets.cpp  Assets.h  Resource.aps  Resource.rc  Roboto-Regular.inl  icon16.png.inl  icon64.png.inl
adp-tool/src/Model/: Device.cpp  Device.h  DeviceClient.cpp  DeviceClient.h  DeviceClientEm.cpp  DeviceClientWspp.cpp  DeviceServer.cpp  DeviceServer.h  DeviceServerWs.cpp  Firmware.cpp  Firmware.h  FirmwareBack.cpp  Log.cpp  Log.h  Reporter.cpp  Reporter.h  Updater.cpp  Updater.h  Utils.cpp  Utils.h  WinDeviceClient.cppp
adp-tool/src/View/: AboutTab.cpp  AboutTab.h  Application.cpp  Application.h  BaseTab.h  Colors.cpp  Colors.h  DeviceTab.cpp  DeviceTab.h  IdleTab.cpp  IdleTab.h  Image.cpp  Image.h  LightsTab.cpp  LightsTab.h  LogTab.cpp  MappingTab.cpp  MappingTab.h  SensitivityTab.cpp  SensitivityTab.h  UpdaterView.cpp  UpdaterView.h
adp-tool/src/Websocket/: Event.hpp  Message.hpp  Server.hpp  Socket.hpp  SocketNamespace.hpp  Websocket.cpp  Websocket.h  config.hpp
client/: package-lock.json  package.json  start.bat
config-tool/: CMakeLists.txt
config-tool/lib/: hidapi.cmake
config-tool/lib/avrdude/: fileio.c
config-tool/lib/hidapi/windows/: hidapi.vcxproj
config-tool/src/: Main.cpp  app.cpp  devices.cpp  devices.h  logging.cpp  logging.h  logo.cpp  logo.h  main.cpp  style.cpp  style.h  utils.cpp  utils.h
config-tool/src/Assets/: Assets.cpp  Assets.h  Logo.h  Logo.inl  icon32.png.inl
config-tool/src/Model/: Device.cpp  Device.h  Devices.cpp  Devices.h  Firmware.cpp  Firmware.h  Log.cpp  Log.h  Logging.cpp  Programmer.cpp  Programmer.h  Reporter.cpp  Reporter.h  Utils.cpp  Utils.h
config-tool/src/View/: AboutTab.cpp  AboutTab.h  BaseTab.h  DeviceTab.cpp  DeviceTab.h  IdleTab.cpp  IdleTab.h  LightsTab.cpp  LightsTab.h  LogTab.cpp  LogTab.h  MappingTab.cpp  MappingTab.h  SensitivityTab.cpp  SensitivityTab.h  Style.cpp  Style.h
config-tool/src/pages/: about.h  base.h  buttons.h  device.h  firmware.h  idle.h  log.h  mapping.h  sensitivity.h  sensors.h
firmware/: ADC.c  ADC.h  AnalogDancePad.c  AnalogDancePad.h  Communication.c  Communication.h  ConfigStore.c  ConfigStore.h  Debug.c  Debug.h  Descriptors.c  Descriptors.h  Lights.c  Lights.h  Pad.c  Pad.h  Reset.c  Reset.h  filter_lufa.py  partitions.csv  platformio.ini
firmware/ADP-firmware/include/: DancePadConfig.h
firmware/ADP-firmware/include/Reports/: PadReports.h  Reports.h
firmware/ADP-firmware/src/Reports/: PadReports.cpp
firmware/Config/: DancePadConfig.h
firmware/Reports/: LightReports.c  LightReports.cpp  LightReports.h  PadReports.cpp  PadReports.h  Reports.cpp  Reports.h  ReportsInternal.h  SensorReports.cpp  SensorReports.h
firmware/bootloader/: makefile
firmware/data/: adp-tool.desktop  adp-tool.html  adp-tool.js  adp-tool.wasm  index.html
firmware/include/: adp_config.hpp  adp_config_esp32.hpp  adp_config_m32u4.hpp  adp_pins.h  adp_pins_esp32.h  adp_pins_m32u4.h
firmware/include/esp32s3/: adp_config_child.h  adp_pins.h  config_default.h
firmware/include/fsriov2/: adp_config_child.h  adp_pins.h  config_default.h
firmware/include/fsriov3/: adp_config_child.h  adp_pins.h  config_default.h
firmware/include/fsriov3compat/: adp_config_child.h  config_default.h
firmware/include/m32u4/: config_default.h
firmware/include/minipadv4/: config_default.h
firmware/scripts/: filter_lufa.py  pre_upload.py  sign_firmware.py
firmware/src/: Structs.hpp  main.cpp
firmware/src/Modules/: DefaultConfig.c  ModuleConfig.cpp  ModuleConfig.hpp  ModuleDebug.cpp  ModuleDebug.hpp  ModuleLights.cpp  ModuleLights.hpp  ModulePad.cpp  ModulePad.hpp  ModuleUSB.cpp  ModuleUSB.hpp  Modules.cpp  Modules.hpp
firmware/src/Reports/: LightReports.cpp  LightReports.hpp  PadReports.cpp  PadReports.hpp  Reports.cpp  Reports.hpp  ReportsInternal.hpp  SensorReports.cpp  SensorReports.hpp
firmware/src/hal/: hal_ADC.hpp  hal_Bootloader.hpp  hal_Debug.hpp  hal_EEPROM.hpp  hal_Lights.hpp  hal_USB.hpp  hal_Webserver.hpp
firmware/src/hal/32u4/: ADC.cpp  Booloader.cpp  Debug.cpp  EEPROM.cpp  LUFAConfig.h  Lights.cpp  USB.c  USB.cpp  arch.h
firmware/src/hal/esp32/: ADC.cpp  EEPROM.cpp  Lights.cpp  USB.cpp  USB_MPG.cpp  Webserver.cpp  usb_descriptors.c
firmware/src/hal/esp32s3/: ADC.cpp  Booloader.cpp  Debug.cpp  Lights.cpp  USB.cpp  USB_Keyboard.cpp  USB_MPG.cpp  Webserver.cpp  arch.h
firmware/teensy2/: AnalogDancePad.c  AnalogDancePad.h  Communication.c  Communication.h  ConfigStore.c  ConfigStore.h  Descriptors.c  Descriptors.h  Lights.c  Lights.h  Pad.c  Pad.h  Reset.c  Reset.h
firmware/teensy2/Config/: DancePadConfig.h
server/: package-lock.json  package.json
server/src/driver/teensy2/: Teensy2DeviceDriver.ts  Teensy2Reports.ts
